implementation: JavaDoc added, commented and tidied up code and minor adaptions